# MLOPS_IPUM_lab

./: .pre-commit-config.yaml  .sops.yaml  README.md  app.py  inference.py  main.py  model.joblib  pyproject.toml  secrets.yaml  settings.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_app.py  test_main.py
